--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -1,5 +1,3 @@
 @import "../../bower_components/normalize.css/normalize.css";
-@import "partials/variables";
-body {
-	
-}
+@import "partials/base";
+@import "common";
