--- a/src/sass/lib/_mixin.scss
+++ b/src/sass/lib/_mixin.scss
@@ -3,52 +3,52 @@
 
 
 @mixin r($width) {
-	@media only screen and (max-width: $width+ "px") {
-		@content
-	}
+  @media only screen and (max-width: $width+ "px") {
+    @content
+  }
 };
 
 @mixin rh($height) {
-	@media only screen and (max-height: $height + "px") {
-		@content
-	}
+  @media only screen and (max-height: $height + "px") {
+    @content
+  }
 };
 
 @mixin pseudo {
-	position: relative;
-	&::before, &::after {
-		position: absolute;
-		content: '';
-		top: 0;
-		left: 0;
-	}
+  position: relative;
+  &::before, &::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+  }
 };
 @mixin clearfix {
-	::after {
-		clear: both;
-		display: table;
-		content: '';
-	}
+  &::after {
+    clear: both;
+    display: table;
+    content: '';
+  }
 };
 
 @mixin border-top-radius($radius) {
-	border-top-right-radius: $radius;
-	border-top-left-radius: $radius;
+  border-top-right-radius: $radius;
+  border-top-left-radius: $radius;
 };
 
 @mixin border-right-radius($radius) {
-	border-bottom-right-radius: $radius;
-	border-top-right-radius: $radius;
+  border-bottom-right-radius: $radius;
+  border-top-right-radius: $radius;
 }
 ;
 @mixin border-bottom-radius($radius) {
-	border-bottom-right-radius: $radius;
-	border-bottom-left-radius: $radius;
+  border-bottom-right-radius: $radius;
+  border-bottom-left-radius: $radius;
 };
 
 @mixin border-left-radius($radius) {
-	border-bottom-left-radius: $radius;
-	border-top-left-radius: $radius;
+  border-bottom-left-radius: $radius;
+  border-top-left-radius: $radius;
 }
 ;
 @mixin user-select($select: none) {
@@ -178,13 +178,13 @@ $font-stack-monaco: (
 // =============================================================================
 
 @function str-replace($string, $search, $replace: "") {
-	$index: str-index($string, $search);
+  $index: str-index($string, $search);
 
-	@if $index {
-		@return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
-	}
+  @if $index {
+    @return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+  }
 
-	@return $string;
+  @return $string;
 }
 
 // =============================================================================
@@ -192,43 +192,88 @@ $font-stack-monaco: (
 // =============================================================================
 
 @mixin font-face($name, $path, $weight: null, $style: null, $exts: eot woff2 woff ttf svg) {
-	$src: null;
+  $src: null;
 
-	$extmods: (
-		eot: "?",
-		svg: "#" + str-replace($name, " ", "_")
-	);
+  $extmods: (
+    eot: "?",
+    svg: "#" + str-replace($name, " ", "_")
+  );
 
-	$formats: (
-		otf: "opentype",
-		ttf: "truetype"
-	);
+  $formats: (
+    otf: "opentype",
+    ttf: "truetype"
+  );
 
-	@each $ext in $exts {
-		$extmod: if(map-has-key($extmods, $ext), $ext + map-get($extmods, $ext), $ext);
-		$format: if(map-has-key($formats, $ext), map-get($formats, $ext), $ext);
-		$src: append($src, url(quote($path + "." + $extmod)) format(quote($format)), comma);
-	}
+  @each $ext in $exts {
+    $extmod: if(map-has-key($extmods, $ext), $ext + map-get($extmods, $ext), $ext);
+    $format: if(map-has-key($formats, $ext), map-get($formats, $ext), $ext);
+    $src: append($src, url(quote($path + "." + $extmod)) format(quote($format)), comma);
+  }
 
-	@font-face {
-		font-family: quote($name);
-		font-style: $style;
-		font-weight: $weight;
-		src: $src;
-	}
+  @font-face {
+    font-family: quote($name);
+    font-style: $style;
+    font-weight: $weight;
+    src: $src;
+  }
 }
 
 //Transitions
 
 @mixin transition($name...) {
-	transition: $name 0.3s ease 0s;
+  transition: $name 0.3s ease 0s;
 }
 @function transition-property-names($props) {
   $new-props: ();
 
   @each $prop in $props {
-	$new-props: append($new-props, transition-property-name($prop), comma);
+  $new-props: append($new-props, transition-property-name($prop), comma);
   }
 
   @return $new-props;
+}
+
+/*
+ * a small mixin for easy use of rem with px as fallback
+ * usage: @include x-rem(font-size, 14px)
+ * usage: @include x-rem(marign, 0 12px 2 1.2)
+ * usage: @include x-rem(padding, 1.5 24px)
+ *
+ * thanks to Eric Meyer for https://github.com/ericam/susy
+ * and Hans Christian Reinl for http://drublic.de/blog/rem-fallback-sass-less/
+ */
+@mixin x-rem($property, $values) {
+  // Create a couple of empty lists as output buffers.
+  $base-font-size: 16px; // should be consistent with your html/body font-size
+  $px-values: ();
+  $rem-values: ();
+
+  // Loop through the $values list
+  @each $value in $values {
+    // For each property value, if it's in rem or px, derive both rem and
+    // px values for it and add those to the end of the appropriate buffer.
+    // Ensure all pixel values are rounded to the nearest pixel.
+    @if $value == 0 or $value == 0px {
+      // 0 -- use it without a unit
+      $px-values: join($px-values, 0);
+      $rem-values: join($rem-values, 0);
+    } @else if type-of($value) == number and not unitless($value) and (unit($value) == px) {
+      // px value given - calculate rem value from base-font-size
+      $new-rem-value: $value / $base-font-size;
+      $px-values: join($px-values, round($value));
+      $rem-values: join($rem-values, #{$new-rem-value}rem);
+    } @else if $value == auto or $value == inherit {
+        // auto or inherit - don't add px or rem
+        $px-values: join($px-values, $value);
+        $rem-values: join($rem-values, $value);
+    } @else {
+      // unitless value - use those directly as rem and calculate the px-fallback
+      $px-values: join($px-values, round($value * $base-font-size));
+      $rem-values: join($rem-values, #{$value}rem);
+    } 
+  }
+
+  // output the converted rules
+  #{$property}: $px-values;
+  #{$property}: $rem-values;
 }
